@@ -58,6 +58,20 @@ impl Context
 		aio.send_ctx(self, msg)
 	}
 
+	/// Receive a message using the context asynchronously.
+	///
+	/// The result of this operation will be available either after calling
+	/// `Aio::wait` or inside of the callback function. If the send operation
+	/// fails, the message can be retrieved using the `Aio::get_msg` function.
+	///
+	/// This function will return immediately. If there is already an I/O
+	/// operation in progress that is _not_ a receive operation, this function
+	/// will return `ErrorKind::TryAgain`.
+	pub fn recv(&self, aio:&Aio) -> Result<()>
+	{
+		aio.recv_ctx(self)
+	}
+
 	/// Returns the inner `nng_ctx` object.
 	pub(crate) fn handle(&self) -> nng_sys::nng_ctx
 	{
